# aws-rust-agent-lambda

./: cdk.json  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  update.sh  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql-analysis.yml  deploy.yml
lambda/: Cargo.toml
lambda/src/: http_handler.rs  rag.rs
lib/: aws-rust-rag-lambda-stack.ts
test/: aws-rust-agent-lambda.test.ts  aws-rust-rag-lambda.test.ts
