[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "^1.0.0", default-features = false, features = ["apigw_http", "tracing"] }

tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

serde_json = "^1.0.145"
serde = { version = "^1.0.228", features = ["derive"] }
tokio = { version = "^1.53.1", features = ["full"] }

# Keep the build dependency set minimal so cargo-lambda can bundle successfully.
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
